ffmpeg build: https://www.cnblogs.com/midoq/p/16969756.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-hello world
+<html>
+    <body>
+        <a href="./pages/20231205/ffmpeg库编译安装及入门指南（Windows篇）- 2022年底钜献 - MidoQ - 博客园.html">ffmpeg编译</a>
+    </body>
+</html>
