--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <html>
   <body>
+    <li>20231222</li>
+    <div>
+      <a href="./pages/20231222/捕获最小化窗口的缩略图画面_dwmregisterthumbnail-CSDN博客.html">捕获最小化窗口的缩略图画面</a>
+    </div>
+    <div>
+      <a href="https://github.com/microsoft/Windows.UI.Composition-Win32-Samples">Windows.UI.Composition-Win32-Samples</a>
+    </div>
+    <div>
+      <a href="https://github.com/robmikh/Win32CaptureSample">Win32CaptureSample</a>
+    </div>
+    <div style="margin-top: 20px;"></div>
+
     <li>20231221</li>
     <div>
       <a href="https://github.com/ShiftMediaProject">ShiftMediaProject</a>
     </div>
     <div style="margin-top: 20px;"></div>
+
     <li>20231205</li>
     <div>
       <a
