--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <div>
       <a href="https://github.com/robmikh/Win32CaptureSample">Win32CaptureSample</a>
     </div>
+    <div>
+      <a href="https://learn.microsoft.com/zh-cn/windows/win32/dwm/thumbnail-ovw">dwm thumbnail-ovw</a>
+    </div>
+    <div>
+      <a href="https://github.com/markus-perl/ffmpeg-build-script">ffmpeg OSX build</a>
+    </div>
     <div style="margin-top: 20px;"></div>
 
     <li>20231221</li>
