ffmpeg win build

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
   <body>
+    <li>20231226</li>
+    <div>
+      <a href="./pages/20231226/ffmpeg-build.html">ffmpeg win构建两种方式</a>
+    </div>
+    <div style="margin-top: 20px;"></div>
+
     <li>20231222</li>
     <div>
       <a href="./pages/20231222/捕获最小化窗口的缩略图画面_dwmregisterthumbnail-CSDN博客.html">捕获最小化窗口的缩略图画面</a>
