--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
   <body>
+    <li>20240113</li>
+    <div>
+      <p>对仓库使用指定的ssh私钥</p>
+      <p>git config --local core.sshCommand "/path/to/id_rsa"</p>
+    </div>
+    <div style="margin-top: 20px;"></div>
+
     <li>20240102</li>
     <div>
       <a href="./pages/20240102/macOS 开发中使用动态库笔记 _ 绿林小屋.html">macOS 开发中使用动态库笔记</a>
