ssh端口转发 https://zhuanlan.zhihu.com/p/148825449

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
   <body>
+    <li>20240114</li>
+    <div>
+      <a href="./pages/20240114/彻底搞懂SSH端口转发命令 - 知乎.html">SSH端口转发</a>
+    </div>
+    <div style="margin-top: 20px;"></div>
+
+
     <li>20240113</li>
     <div>
       <p>对仓库使用指定的ssh私钥</p>
