ssh跳板机 https://zhuanlan.zhihu.com/p/74193910

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
   <body>
+    <li>20240126</li>
+    <div>
+      <a href="./pages/20240126/SSH 通过跳板机直接访问内网机器 - 知乎.html">SSH跳板访问内网机器</a>
+    </div>
+    <div style="margin-top: 20px;"></div>
+
+
     <li>20240114</li>
     <div>
       <a href="./pages/20240114/彻底搞懂SSH端口转发命令 - 知乎.html">SSH端口转发</a>
